[B]1.8.4[/B]
- Added: Runtime for tvshows - needs Krypton or newer

[B]1.8.3[/B]
- Update author name

[B]1.8.2[/B]
- Fixed: Runtime being zero in some cases

[B]1.8.1[/B]
- removed unsupported languages

[B]1.8.0[/B]
- added extra languages for selection
- changed language to a selection list

[B]1.7.2[/B]
- Updated: handle artwork via GetArt chain

[B]1.7.1[/B]
- Updated: language files from Transifex

[B]1.7.0[/B]
- Added: Option to get IMDb episode and series rating when available

[B]1.6.0[/B]
- Changed: Force selected language even if title on another language is being used for the search query

[B]1.5.9[/B]
- Updated: language files from Transifex

v1.5.8
- Added: retrieve number of votes in GetDetails/GetEpisodeDetails

v1.5.7
- Fixed: append language to CreateSearchUrl cache file

v1.5.6
- Updated: language files from Transifex

v1.5.4
- Updated: language files from Transifex

v1.5.3
- Fixed: Language tag caching - round two (thx and credits to pgit)

v1.5.2
- Changed: Dropped the www from thetvdb URLs

v1.5.1
- Updated: Versioning for xbmc.metadata

v1.5.0
- Added: Language tag to caching (thx and credits to pgit)
- Added: Caching for search results (thx and credits to pgit)
- Removed: Poster preference as this is not needed for Frodo

v1.4.5
- Fixed: dvdorder setting won't apply in GetEpisodeDetails (thx and credits to scudlee)

v1.4.4
- Updated: language files from Transifex

v1.4.3
- Updated: language files from Transifex

v1.4.2
- Added: cache to GetTVDBId

v1.4.1
- Fixed: missing xml tag in GetTVDBId

v1.4.0
- Added: scraping of EpisodeID

v1.3.1
- Added: added back non-intentional removal of the imdb id lookup

v1.3.0
- Added: return the aspect attribute for thumb fields as banner or poster

v1.2.4
- Added: support for imdb url nfo's

v1.2.3
- Fixed: fixed broken scraping under certain circumtaces

v1.2.2
- Fixed: episodeguide url won't picked up sometimes

v1.2.1
- Fixed: won't parse longer search results

v1.2.0
- Added: episode runtime scraping
