@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.tvdb.com"
        name="The TVDB"
-       version="1.8.4"
+       version="1.8.5"
        provider-name="Team Kodi">
   <requires>
     <import addon="xbmc.metadata" version="2.1.0"/>
-    <import addon="metadata.common.imdb.com" version="2.7.8"/>
+    <import addon="metadata.common.imdb.com" version="2.8.8"/>
   </requires>
   <extension point="xbmc.metadata.scraper.tvshows"
              language="multi"
@@ -123,5 +123,7 @@
     <website></website>
     <email></email>
     <source></source>
+	<news>v1.8.5
+- Added uniqueids and ratings with their name - needs Krypton or newer</news>
   </extension>
 </addon>
