@@ -58,11 +58,17 @@
 			<RegExp input="$$1" output="\1" dest="5">
 				<expression noclean="1">&lt;Series&gt;.*?&lt;id&gt;$$2&lt;/id&gt;(.*)</expression>
 			</RegExp>
-			<RegExp input="$$5" output="&lt;plot&gt;\1&lt;/plot&gt;" dest="4">
-				<expression noclean="1">&lt;Overview&gt;([^&lt;]*)&lt;/Overview&gt;</expression>
-			</RegExp>
-			<RegExp input="$$2" output="&lt;id&gt;\1&lt;/id&gt;" dest="4+">
+			<RegExp input="$$1" output="&lt;id&gt;$$2&lt;/id&gt;&lt;uniqueid type=&quot;thetvdb&quot; default=&quot;true&quot;&gt;$$2&lt;/uniqueid&gt;" dest="4">
 				<expression/>
+			</RegExp>
+			<RegExp input="$$5" output="\1" dest="11">
+				<expression clear="yes">&lt;IMDB_ID&gt;([^&lt;]+)&lt;/IMDB_ID&gt;</expression>
+			</RegExp>
+			<RegExp input="$$11" output="&lt;uniqueid type=&quot;imdb&quot;&gt;\1&lt;/uniqueid&gt;" dest="4+">
+				<expression>(.+)</expression>
+			</RegExp>
+			<RegExp input="$$5" output="&lt;plot&gt;\1&lt;/plot&gt;" dest="4+">
+				<expression noclean="1">&lt;Overview&gt;([^&lt;]*)&lt;/Overview&gt;</expression>
 			</RegExp>
 			<RegExp input="$$1" output="&lt;mpaa&gt;\1&lt;/mpaa&gt;" dest="4+">
 				<expression>&lt;ContentRating&gt;([^&lt;]*)&lt;/ContentRating&gt;</expression>
@@ -73,33 +79,39 @@
 			<RegExp input="$$5" output="&lt;runtime&gt;\1&lt;/runtime&gt;" dest="4+"> 
 				<expression>&lt;Runtime&gt;([^&lt;]+)&lt;/Runtime&gt;</expression> 
 			</RegExp>
-			<RegExp input="$INFO[RatingS]" output="$$12" dest="4+">
-				<RegExp input="$$5" output="&lt;rating&gt;\1&lt;/rating&gt;" dest="12+">
-					<expression>&lt;Rating&gt;([^&lt;]+)&lt;/Rating&gt;</expression>
-				</RegExp>
-				<RegExp input="$$5" output="&lt;votes&gt;\1&lt;/votes&gt;" dest="12+">
-					<expression>&lt;RatingCount&gt;([^&lt;]+)&lt;/RatingCount&gt;</expression>
+			<RegExp input="$$5" output="\1" dest="12">
+				<expression>&lt;Rating&gt;([^&lt;]+)&lt;/Rating&gt;</expression>
+			</RegExp>
+			<RegExp input="$$5" output="\1" dest="13">
+				<expression>&lt;RatingCount&gt;([^&lt;]+)&lt;/RatingCount&gt;</expression>
+			</RegExp>
+			<RegExp input="$$12" output="&lt;rating&gt;\1&lt;/rating&gt;" dest="4+">
+				<expression>(.+)</expression>
+			</RegExp>
+			<RegExp input="$$13" output="&lt;votes&gt;\1&lt;/votes&gt;" dest="4+">
+				<expression>(.+)</expression>
+			</RegExp>
+			<RegExp input="$$12" output="&lt;value&gt;\1&lt;/value&gt;" dest="14">
+				<expression>(.+)</expression>
+			</RegExp>
+			<RegExp input="$$13" output="&lt;votes&gt;\1&lt;/votes&gt;" dest="14+">
+				<expression>(.+)</expression>
+			</RegExp>
+			<RegExp input="$INFO[RatingS]" output="$$15" dest="4+">
+				<RegExp input="$$14" output="&lt;ratings&gt;&lt;rating name=&quot;thetvdb&quot; default=&quot;true&quot;&gt;\1&lt;/rating&gt;&lt;/ratings&gt;" dest="15">
+					<expression noclean="1">(.+)</expression>
 				</RegExp>
 				<expression>TheTVDB</expression>
 			</RegExp>
-			<RegExp input="$INFO[RatingS]" output="$$13" dest="4+">
-				<RegExp input="$$5" output="\1" dest="11">
-					<expression clear="yes">&lt;IMDB_ID&gt;([^&lt;]+)&lt;/IMDB_ID&gt;</expression>
-				</RegExp>
-				<RegExp input="$$11" output="\1" dest="13">
-					<RegExp conditional="fallback" input="$$5" output="&lt;rating&gt;\1&lt;/rating&gt;" dest="13+">
-						<expression>&lt;Rating&gt;([^&lt;]+)&lt;/Rating&gt;</expression>
-					</RegExp>
-					<RegExp conditional="fallback" input="$$5" output="&lt;votes&gt;\1&lt;/votes&gt;" dest="13+">
-						<expression>&lt;RatingCount&gt;([^&lt;]+)&lt;/RatingCount&gt;</expression>
-					</RegExp>
-					<expression>^$</expression>
-				</RegExp>
-				<RegExp input="$$11" output="&lt;chain function=&quot;GetIMDBRatingById&quot;&gt;$$11&lt;/chain&gt;" dest="13">
+			<RegExp input="$INFO[RatingS]" output="$$16" dest="4+">
+				<RegExp input="$$11" output="&lt;chain function=&quot;GetIMDBRatingsByIdAsDef&quot;&gt;\1&lt;/chain&gt;&lt;ratings&gt;&lt;rating name=&quot;thetvdb&quot;&gt;$$14&lt;/rating&gt;&lt;/ratings&gt;" dest="16+">
 					<expression>(.+)</expression>
 				</RegExp>
+				<RegExp input="$$11" conditional="fallback" output="&lt;ratings&gt;&lt;rating name=&quot;thetvdb&quot; default=&quot;true&quot;&gt;$$14&lt;/rating&gt;&lt;/ratings&gt;" dest="16+">
+					<expression>^$</expression>
+				</RegExp>
 				<expression>IMDb</expression>
-			</RegExp>			
+			</RegExp>
 			<RegExp input="$$5" output="&lt;studio&gt;\1&lt;/studio&gt;" dest="4+">
 				<expression>&lt;Network&gt;([^&lt;]*)&lt;/Network&gt;</expression>
 			</RegExp>
@@ -232,8 +244,14 @@
 			<RegExp input="$$1" output="\1" dest="8">
 				<expression noclean="1">&lt;Episode&gt;.*?&lt;id&gt;$$2&lt;/id&gt;(.*?)&lt;/Episode&gt;</expression>
 			</RegExp>
-			<RegExp input="$$1" output="&lt;uniqueid&gt;$$2&lt;/uniqueid&gt;" dest="4">
+			<RegExp input="$$1" output="&lt;id&gt;$$2&lt;/id&gt;&lt;uniqueid type=&quot;thetvdb&quot; default=&quot;true&quot;&gt;$$2&lt;/uniqueid&gt;" dest="4">
 				<expression/>
+			</RegExp>
+			<RegExp input="$$8" output="\1" dest="11">
+				<expression clear="yes">&lt;IMDB_ID&gt;([^&lt;]+)&lt;/IMDB_ID&gt;</expression>
+			</RegExp>
+			<RegExp input="$$11" output="&lt;uniqueid type=&quot;imdb&quot;&gt;\1&lt;/uniqueid&gt;" dest="4+">
+				<expression>(.+)</expression>
 			</RegExp>
 			<RegExp input="$$8" output="&lt;plot&gt;\1&lt;/plot&gt;" dest="4+">
 				<expression>&lt;Overview&gt;([^&lt;]*)&lt;/Overview&gt;</expression>
@@ -319,30 +337,36 @@
 			<RegExp input="$$8" output="&lt;displayafterseason&gt;\1&lt;/displayafterseason&gt;" dest="4+">
 				<expression>&lt;airsafter_season&gt;([^&lt;]+)&lt;/airsafter_season&gt;</expression>
 			</RegExp>
-			<RegExp input="$INFO[RatingS]" output="$$12" dest="4+">
-				<RegExp input="$$8" output="&lt;rating&gt;\1&lt;/rating&gt;" dest="12+">
-					<expression>&lt;Rating&gt;([^&lt;]+)&lt;/Rating&gt;</expression>
-				</RegExp>
-				<RegExp input="$$8" output="&lt;votes&gt;\1&lt;/votes&gt;" dest="12+">
-					<expression>&lt;RatingCount&gt;([^&lt;]+)&lt;/RatingCount&gt;</expression>
+			<RegExp input="$$8" output="\1" dest="12">
+				<expression>&lt;Rating&gt;([^&lt;]+)&lt;/Rating&gt;</expression>
+			</RegExp>
+			<RegExp input="$$8" output="\1" dest="13">
+				<expression>&lt;RatingCount&gt;([^&lt;]+)&lt;/RatingCount&gt;</expression>
+			</RegExp>
+			<RegExp input="$$12" output="&lt;rating&gt;\1&lt;/rating&gt;" dest="4+">
+				<expression>(.+)</expression>
+			</RegExp>
+			<RegExp input="$$13" output="&lt;votes&gt;\1&lt;/votes&gt;" dest="4+">
+				<expression>(.+)</expression>
+			</RegExp>
+			<RegExp input="$$12" output="&lt;value&gt;\1&lt;/value&gt;" dest="14">
+				<expression>(.+)</expression>
+			</RegExp>
+			<RegExp input="$$13" output="&lt;votes&gt;\1&lt;/votes&gt;" dest="14+">
+				<expression>(.+)</expression>
+			</RegExp>
+			<RegExp input="$INFO[RatingS]" output="$$15" dest="4+">
+				<RegExp input="$$14" output="&lt;ratings&gt;&lt;rating name=&quot;thetvdb&quot; default=&quot;true&quot;&gt;\1&lt;/rating&gt;&lt;/ratings&gt;" dest="15">
+					<expression noclean="1">(.+)</expression>
 				</RegExp>
 				<expression>TheTVDB</expression>
 			</RegExp>
-			<RegExp input="$INFO[RatingS]" output="$$13" dest="4+">
-				<RegExp input="$$8" output="\1" dest="11">
-					<expression clear="yes">&lt;IMDB_ID&gt;([^&lt;]+)&lt;/IMDB_ID&gt;</expression>
-				</RegExp>
-				<RegExp input="$$11" output="\1" dest="13">
-					<RegExp conditional="fallback" input="$$8" output="&lt;rating&gt;\1&lt;/rating&gt;" dest="13+">
-						<expression>&lt;Rating&gt;([^&lt;]+)&lt;/Rating&gt;</expression>
-					</RegExp>
-					<RegExp conditional="fallback" input="$$8" output="&lt;votes&gt;\1&lt;/votes&gt;" dest="13+">
-						<expression>&lt;RatingCount&gt;([^&lt;]+)&lt;/RatingCount&gt;</expression>
-					</RegExp>
-					<expression>^$</expression>
-				</RegExp>
-				<RegExp input="$$11" output="&lt;chain function=&quot;GetIMDBRatingById&quot;&gt;$$11&lt;/chain&gt;" dest="13">
+			<RegExp input="$INFO[RatingS]" output="$$16" dest="4+">
+				<RegExp input="$$11" output="&lt;chain function=&quot;GetIMDBRatingsByIdAsDef&quot;&gt;\1&lt;/chain&gt;&lt;ratings&gt;&lt;rating name=&quot;thetvdb&quot;&gt;$$14&lt;/rating&gt;&lt;/ratings&gt;" dest="16+">
 					<expression>(.+)</expression>
+				</RegExp>
+				<RegExp input="$$11" conditional="fallback" output="&lt;ratings&gt;&lt;rating name=&quot;thetvdb&quot; default=&quot;true&quot;&gt;$$14&lt;/rating&gt;&lt;/ratings&gt;" dest="16+">
+					<expression>^$</expression>
 				</RegExp>
 				<expression>IMDb</expression>
 			</RegExp>
